# ares_byte_code

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
include/: field_info.h
include/aresbc/: attribute_info.h  class_file.h  class_reader.h  class_writer.h  constant_info.h  field_info.h  method_info.h  utils.h  visitor.h  vm_check.h
src/: attribute_info.cpp  class_file.cpp  class_reader.cpp  class_writer.cpp  constant_info.cpp  field_info.cpp  method_info.cpp  utils.cpp  vm_check.cpp
tests/: CMakeLists.txt  library.cpp  main.cpp
